<resources>
    <string name="app_name">Time To Eat</string>
    <string name="title_activity_first_page">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="activity_main_heading">Feeling Hungry?</string>
    <string name="activity_main_recommend_recipe">Recommend a recipe...</string>

    <string name="activity_main_subheading1">Start searching</string>
    <string name="activity_main_search_recipe">Search Now</string>
    <string name="activity_main_change_prefs">Preferences</string>

    <string name="activity_main_subheading2">Saved lists</string>
    <string name="activity_main_to_buy_list">To Buy List</string>
    <string name="activity_main_saved_recipes">Saved Recipes</string>
    <string name="activity_main_find_supermarket">Find Supermarket</string>

    <string name="my_recipe">My Recipes</string>
    <string name="activity_main_logout">Logout</string>


    <string name="activity_recipe_search_input_hint">Search for...</string>


</resources>
